--- a/src/components/Momentum/RelaxComponent/RelaxComponent.scss
+++ b/src/components/Momentum/RelaxComponent/RelaxComponent.scss
@@ -20,6 +20,7 @@
   position: relative;
   border-radius: 15px;
   background-color: rgb(255, 255, 255, 0.1);
+  cursor: default;
 }
 .expandable-block:hover {
   height: 100%;
